opam-version: "2.0"
name: "omake"
maintainer: "Gerd Stolpmann <gerd@gerd-stolpmann.de>"
authors: ["Aleksey Nogin" "Jason Hickey" "Gerd Stolpmann"]
license: "GPL2"
homepage: "http://projects.camlcity.org/projects/omake.html"
bug-reports: "https://github.com/ocaml-omake/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "ocamlfind"
]
flags: light-uninstall
build: [
  ["./configure" "-prefix" "%{prefix}%"]
  [make]
]
install: [make "install"]
remove: [
  ["rm" "-f" "%{prefix}%/bin/omake"]
  ["rm" "-f" "%{prefix}%/bin/osh"]
  ["rm" "-rf" "%{prefix}%/lib/omake"]
]
dev-repo: "git+https://github.com/ocaml-omake/omake.git"
